# vitrum

./: .gitignore  .org-viewer-peers.json  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/server/: document.rs  federation.rs  index.rs  mod.rs  peers.rs  routes.rs  static_files.rs  sync.rs  watcher.rs
