[package]
name = "org-viewer"
version = "0.1.0"
description = "Personal organization system viewer"
authors = ["Alex Moyer"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Embedded server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
gray_matter = "0.2"
walkdir = "2"
notify = "8"
fuzzy-matcher = "0.3"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
