[package]
name = "vitrum"
version = "0.2.0"
description = "Vitrum — the glass through which materia is seen"
authors = ["Alex Moyer"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Embedded server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
gray_matter = "0.2"
walkdir = "2"
notify = "8"
fuzzy-matcher = "0.3"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
dirs = "5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
